# nonebot-simplemusic

./: README.md  pyproject.toml  setup.py
nonebot-simplemusic/: __init__.py  data_source.py
